--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MemberDetail"></activity>
+        <activity android:name=".MemberUpdate"></activity>
+        <activity android:name=".MemberDetail" />
         <activity android:name=".MemberList" />
         <activity android:name=".Login" />
         <activity android:name=".Main">
